# college_essay_version2

./: README.md  critic.md  essay-business-Qwen2.5.md  essay-business-codeqwen.md  essay-business-llama3.md  essay-business-mistral.md  essay-business-phi.md  essay-mistral.md  essay.md  essayGPT3.5turbo.md  essayGPT4.0-crewlatest.md  essayGPT4o.md  essay_hierachical.md  essayllama3.2.md  pyproject.toml
chatbot/: package.json
chatbot/public/: index.html
chatbot/src/: App.js
chatbot/src/components/: Chatbot.jsx  CollegeEssayStreamer.jsx  essayStore.js
chatbot/src/components/layout/: Navbar.jsx
chatbot/src/pages/: About.jsx
src/college_essay_version2/: college_essay_streaming.py  crew.py  main.py  main_stream.py
src/college_essay_version2/config/: agents.yaml  tasks.yaml
src/college_essay_version2/tools/: txt_PDF_tool.py
uploads/: Rika_Pinto_Resume.txt  albert-pinto.txt
